@@ -1,3 +1,9 @@
+2006-02-10  Christian Persch  <chpe@cvs.gnome.org>
+
+	* embed/mozilla/mozilla-embed-single.cpp:
+
+	Use NS_LogInit()/NS_LogTerm().
+
 2006-02-09  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/bookmarks/ephy-bookmark-action-group.c: (node_changed_cb),
